ProjectDetails navigation working

--- a/Portfolio.IU.Wasm/Pages/Index.razor
+++ b/Portfolio.IU.Wasm/Pages/Index.razor
@@ -52,7 +52,7 @@
 <ul>
     @foreach (var p in projects)
     {
-<li>@p.Title</li>}
+<li><a href="/ProjectDetails/@p.Id"> @p.Title</a></li>}
 </ul>
 
 
