--- a/Portfolio.IU.Wasm/Pages/Index.razor
+++ b/Portfolio.IU.Wasm/Pages/Index.razor
@@ -36,7 +36,7 @@
         </div>
         <div>
         </div>
-        @*<button @onclick="removeProject" class="btn btn-primary">Add Project</button>*@
+        <button @onclick="addProject" class="btn btn-primary">Add Project</button>
     </div>
 </body>
 
@@ -53,7 +53,7 @@
     {
     <li>
         <a href="/ProjectDetails/@p.Id"> @p.Title</a>
-        <button @onclick="addProject" class="btn btn-primary">Remove </button>
+        @*<button @onclick="removeProject" class="btn btn-primary">Remove </button>*@
     </li>}
 </ul>
 
@@ -90,7 +90,7 @@
     }
     //private async Task removeProject()
     //{
-    //    await ;
+    //    await http.DeleteAsync("", project);
     //}
 
     private async Task loadProjects()
