Updating project works again

--- a/Portfolio.IU.Wasm/Pages/ProjectDetails.razor
+++ b/Portfolio.IU.Wasm/Pages/ProjectDetails.razor
@@ -64,7 +64,7 @@
 
     private async Task updateProject()
     {
-        var project = new ProjectViewModel
+        var project = new Project
         {
             Id = ProjectId,
             Title = projectName,
