--- a/Portfolio.IU.Wasm/Shared/NavMenu.razor
+++ b/Portfolio.IU.Wasm/Shared/NavMenu.razor
@@ -13,7 +13,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="categories">
+            <NavLink class="nav-link" href="category">
                 <span class="oi oi-file" aria-hidden="true"></span> Categories
             </NavLink>
         </li>
