--- a/Portfolio.IU.Wasm/Pages/ProjectDetails.razor
+++ b/Portfolio.IU.Wasm/Pages/ProjectDetails.razor
@@ -30,7 +30,7 @@
     <ul>
         @foreach (var language in SelectedProject.Languages)
         {
-            <li><a href="langauges/@language.Id">@language.Name</a></li>
+            <li><a href="category/language/#@language.Name">@language.Name</a></li>
         }
     </ul>
 
@@ -39,7 +39,7 @@
     <ul>
         @foreach (var platform in SelectedProject.Platforms)
         {
-            <li><a href="platfrom/@platform.Id">@platform.Name</a></li>
+            <li><a href="category/platfrom/#@platform.Name">@platform.Name</a></li>
         }
     </ul>
 
@@ -48,7 +48,7 @@
     <ul>
         @foreach (var technology in SelectedProject.Technologies)
         {
-            <li><a href="langauges/@technology.Id">@technology.Name</a></li>
+            <li><a href="category/technology/#@technology.Name">@technology.Name</a></li>
         }
     </ul>
 </div>
