--- a/Portfolio.IU.Wasm/Shared/NavMenu.razor
+++ b/Portfolio.IU.Wasm/Shared/NavMenu.razor
@@ -14,12 +14,17 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="category">
-                <span class="oi oi-file" aria-hidden="true"></span> Categories
+                <span class="oi oi-list" aria-hidden="true"></span> Categories
             </NavLink>
         </li>
         @*<li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="journal">
+                <span class="oi oi-book" aria-hidden="true"></span> Journal
+            </NavLink>
+        </li>*@
+        @*<li class="nav-item px-3">
+            <NavLink class="nav-link" href="resume">
+                <span class="oi oi-file" aria-hidden="true"></span> Resume
             </NavLink>
         </li>*@
     </ul>
