--- a/Portfolio.IU.Wasm/Pages/ProjectDetails.razor
+++ b/Portfolio.IU.Wasm/Pages/ProjectDetails.razor
@@ -1,8 +1,10 @@
-﻿@page "/project/projectdetails/{ProjectId:int}"
+﻿@page "/project/projectdetails/{Slug}"
 @inject HttpClient http
 @using Portfolio.Shared.ViewModels
 @using Portfolio.Shared
 
+
+<MarkdownView Content ="@projectRequirements"/>
 <h3>ProjectDetails @ProjectId</h3>
 
 <div class="form-group">
@@ -52,8 +54,11 @@
 </div>
 
 
+
 @code { [Parameter]
     public int ProjectId { get; set; }
+    [Parameter]
+    public string Slug { get; set; }
     public int Id { get; set; }
 
     string newLanguage;
@@ -71,10 +76,11 @@
 
     protected override async Task OnInitializedAsync()
     {
-        if (ProjectId == 0)
+        if (Slug == null)
             return;
-        var projects = (await http.GetFromJsonAsync<IEnumerable<ProjectViewModel>>("/api/project/"));
-        SelectedProject = projects.FirstOrDefault(p => p.Id == ProjectId);
+        //var projects = (await http.GetFromJsonAsync<IEnumerable<ProjectViewModel>>("/api/project/"));
+        //SelectedProject = projects.FirstOrDefault(p => p.Id == ProjectId);
+        SelectedProject = (await http.GetFromJsonAsync<ProjectViewModel>($"/api/project/projectdetails/{Slug}"));
 
         projectName = SelectedProject.Title;
         projectRequirements = SelectedProject.Requirements;
@@ -141,5 +147,5 @@
         await OnInitializedAsync();
     }
 
-   
+
 }
