--- a/Portfolio.IU.Wasm/Pages/Language.razor
+++ b/Portfolio.IU.Wasm/Pages/Language.razor
@@ -13,7 +13,7 @@
                 <ul>
                     @foreach (var pl in l.Projects)
                     {
-                    <li id="@pl.Title"><a href="./project/projectdetails/@pl.Id">@pl.Title</a></li>
+                    <li id="@pl.Title"><a href="./project/projectdetails/@pl.Slug">@pl.Title</a></li>
                     }
                 </ul>
             </li>
