--- a/Portfolio.IU.Wasm/Pages/Platform.razor
+++ b/Portfolio.IU.Wasm/Pages/Platform.razor
@@ -13,7 +13,7 @@
                 <ul>
                     @foreach (var pp in p.Projects)
                     {
-                        <li id="@pp.Title"><a href="./project/projectdetails/@pp.Id">@pp.Title</a></li>
+                        <li id="@pp.Title"><a href="./project/projectdetails/@pp.Slug">@pp.Title</a></li>
                     }
                 </ul>
             </li>
