--- a/Portfolio.IU.Wasm/Pages/ProjectDetails.razor
+++ b/Portfolio.IU.Wasm/Pages/ProjectDetails.razor
@@ -39,7 +39,7 @@
     <ul>
         @foreach (var platform in SelectedProject.Platforms)
         {
-            <li><a href="category/platfrom/#@platform.Name">@platform.Name</a></li>
+            <li><a href="category/platform/#@platform.Name">@platform.Name</a></li>
         }
     </ul>
 
