--- a/Portfolio.IU.Wasm/Pages/Technology.razor
+++ b/Portfolio.IU.Wasm/Pages/Technology.razor
@@ -13,7 +13,7 @@
             <ul>
                 @foreach (var pt in t.Projects)
                 {
-                    <li id="@pt.Title"><a href="./project/projectdetails/@pt.Id">@pt.Title</a></li>
+                    <li id="@pt.Title"><a href="./project/projectdetails/@pt.Slug">@pt.Title</a></li>
                 }
             </ul>
         </li>
