--- a/Portfolio.IU.Wasm/Pages/EditProjectDetails.razor
+++ b/Portfolio.IU.Wasm/Pages/EditProjectDetails.razor
@@ -27,30 +27,19 @@
 <div>
     <div>Language</div>
     <div><input @bind-value="newLanguage" /><button @onclick="assignLanguage">Add</button></div>
-    <ul>
-        @foreach (var language in SelectedProject.Languages)
-        {
-            <li><a href="category/language/#@language.Name">@language.Name</a></li>
-        }
-    </ul>
+    <ListOfLanguages SelectedProject="@SelectedProject" />
 
+    
     <div>Platform</div>
     <div><input @bind-value="newPlatform" /><button @onclick="assignPlatform">Add</button></div>
-    <ul>
-        @foreach (var platform in SelectedProject.Platforms)
-        {
-            <li><a href="category/platform/#@platform.Name">@platform.Name</a></li>
-        }
-    </ul>
+    <ListOfPlatforms SelectedProject="@SelectedProject" />
+       
 
     <div>Technology</div>
     <div><input @bind-value="newTechnology" /><button @onclick="assignTechnology">Add</button></div>
-    <ul>
-        @foreach (var technology in SelectedProject.Technologies)
-        {
-            <li><a href="category/technology/#@technology.Name">@technology.Name</a></li>
-        }
-    </ul>
+    <ListOfTechnologies SelectedProject="@SelectedProject" />
+
+    
 </div>
 <MarkdownView Content="@projectRequirements" />
 
@@ -78,8 +67,6 @@
     {
         if (Slug == null)
             return;
-        //var projects = (await http.GetFromJsonAsync<IEnumerable<ProjectViewModel>>("/api/project/"));
-        //SelectedProject = projects.FirstOrDefault(p => p.Id == ProjectId);
         SelectedProject = (await http.GetFromJsonAsync<ProjectViewModel>($"/api/project/projectdetails/{Slug}"));
 
         projectName = SelectedProject.Title;
