--- a/Portfolio.IU.Wasm/Shared/NavMenu.razor
+++ b/Portfolio.IU.Wasm/Shared/NavMenu.razor
@@ -22,11 +22,11 @@
                 <span class="oi oi-book" aria-hidden="true"></span> Journal
             </NavLink>
         </li>*@
-        @*<li class="nav-item px-3">
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="resume">
                 <span class="oi oi-file" aria-hidden="true"></span> Resume
             </NavLink>
-        </li>*@
+        </li>
     </ul>
 </div>
 
